bk_ida/gobmkida/c2/status_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/status_to_string/src/engine/printutils.c:784:8: error: use of undeclared identifier 'off_4965D0'
return off_4965D0[status]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/status_to_string/src/obj/1/printutils.o] Error 1
